--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,7 @@
 .app{
   display:grid;
   place-items: center;
-  background-color:#dadbd3;
+  background-color:#dadfd3;
   height:100vh;
 }
 
@@ -11,4 +11,7 @@
   height:90vh;
   width:90vw;
   box-shadow: -1px 4px 20px -6px rgba(0,0,0,0.2);
+}
+input:focus{
+  outline: none;
 }
